<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_view_coordinates"
            android:icon="@drawable/ic_list_coordinates"
            android:title="@string/menu_view_coordinates" />
        <item
            android:id="@+id/nav_render_map"
            android:icon="@drawable/ic_render_map"
            android:title="@string/menu_render_map" />
        <item
            android:id="@+id/nav_open_in_ar"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_open_in_ar" />
        <item
            android:id="@+id/nav_models"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_models" />
        <item
            android:id="@+id/nav_development"
            android:icon="@drawable/ic_satellite_24"
            android:title="@string/menu_development" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/action_settings" />
    </group>
</menu>
