<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="?attr/colorPrimaryContainer"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/nav_header_desc"
        android:layout_marginBottom="@dimen/nav_header_vertical_spacing"
        app:srcCompat="@drawable/ic_launcher_foreground"
        app:tint="?attr/colorOnPrimaryContainer" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_title"
        android:textAppearance="?attr/textAppearanceTitleMedium"
        android:textColor="?attr/colorOnPrimaryContainer"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/nav_header_subtitle"
        android:textAppearance="?attr/textAppearanceBodySmall"
        android:textColor="?attr/colorOnPrimaryContainer"
        android:alpha="0.8" />

</LinearLayout>
